--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "anydoor",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "about NodeJs static Web Server",
-  "main": "index.js",
+  "main": "src/app.js",
+  "bin": {
+    "anydoor": "bin/anydoor"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/runrunlolz/anydoor/issues"
   },
-  "homepage": "https://github.com/runrunlolz/anydoor#readme"
+  "homepage": "https://github.com/runrunlolz/anydoor#readme",
+  "dependencies": {
+    "yargs": "^12.0.5"
+  }
 }
